--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Pose Tracker</string>
     <string name="no_camera_access">please grant camera permissions</string>
 </resources>
